--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,18 +12,18 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-            <a href="index.html" class="logo-link">
+            <a href="/home" class="logo-link">
                 <img class="logo-img" src="assets/logo-blue.png" alt="Sudocrypt" />
                 <span class="nav-brand" id="brandVersion">Intra Sudo vX.X</span>
             </a>
         </div>
         <div class="nav-center">
-            <a href="index.html" class="nav-link active">Home</a>
-            <a href="leaderboard.html" class="nav-link">Leaderboard</a>
-            <a href="hints.html" class="nav-link">Hints</a>
+            <a href="/home" class="nav-link active">Home</a>
+            <a href="/leaderboard" class="nav-link">Leaderboard</a>
+            <a href="/hints" class="nav-link">Hints</a>
         </div>
         <div class="nav-right">
-            <a href="admin.html" class="nav-link" id="adminLink" style="display: none;">Admin</a>
+            <a href="/admin" class="nav-link" id="adminLink" style="display: none;">Admin</a>
             <a href="#" class="nav-link" onclick="handleLogout()">Log Out</a>
         </div>
     </nav>
@@ -46,7 +46,7 @@
     </main>
 
     <div class="chat-button">
-        <a href="chat.html" class="chat-link">
+        <a href="/chat" class="chat-link">
             <img src="assets/logo_nobg.png" alt="Chat" class="chat-logo">
             <div class="notification-dot" id="notificationDot"></div>
         </a>
