feat: furthered Implemented linking of backend to frontend

--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -32,8 +32,6 @@
         </main>
     </div>
     
-    <script>
-        console.log('Landing page loaded - accessible to all users');
-    </script>
+    <script src="js/landing.js"></script>
 </body>
 </html>
