feat: add leaderboard, hints pages and admin user management backend

--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -31,7 +31,6 @@
         </div>
     </nav>
 
-    <!-- Mobile Navigation Menu -->
     <div class="mobile-nav-menu" id="mobileNavMenu">
         <div class="mobile-nav-links">
             <a href="/home" class="nav-link">Home</a>
@@ -45,6 +44,9 @@
     <main class="main-container">
         <div class="main-content">
             <h1 class="level-heading">Hints</h1>
+
+            <div class="level-question-container" id="levelQuestionContainer" style="margin-bottom: 2rem; display: none;">
+            </div>
 
             <div class="hints-container" id="hintsContainer">
                 <div class="hint-item" style="text-align: center; color: rgba(255, 255, 255, 0.7);">
@@ -61,7 +63,7 @@
         </a>
     </div>
 
-    <script src="js/utils.js"></script>
-    <script src="js/hints.js"></script>
+    <script src="js/utils.js?v=2"></script>
+    <script src="js/hints.js?v=2"></script>
 </body>
 </html>
