--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -15,7 +15,7 @@
             <div class="content-card auth-card">
                 <div class="card-header">
                     <img src="assets/logo-blue.png" alt="Sudocrypt Logo" class="auth-logo">
-                    <h1 class="card-title">Welcome to Intra Sudo vX.X</h1>
+                    <h1 class="card-title">Welcome to Intra Sudo v6.0</h1>
                     <p class="auth-subtitle">Enter your email to receive a verification code</p>
                 </div>
                 
@@ -133,5 +133,12 @@
         background: #1e5fd9;
     }
     </style>
+    
+    <footer class="page-footer">
+        <div class="footer-content">
+            <p class="footer-text">&copy; Exun Clan</p>
+            <p class="footer-text">The Computer Club of Delhi Public School, R.K. Puram</p>
+        </div>
+    </footer>
 </body>
 </html>
