--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -13,9 +13,10 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-            <a href="/home" class="logo-link">
+            <a href="/" class="logo-link">
                 <img class="logo-img" src="assets/logo-blue.png" alt="Sudocrypt" />
-                <span class="nav-brand">Intra Sudo vX.X</span>
+                <div class="logo-notification" id="logoNotification" style="display: none;"></div>
+                <span class="nav-brand">Intra Sudo v6.0</span>
             </a>
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                 <img src="assets/logo_nobg.png" alt="Menu" class="mobile-menu-icon">
@@ -550,5 +551,12 @@
             opacity: 0.9;
         }
     </style>
+    
+    <footer class="page-footer">
+        <div class="footer-content">
+            <p class="footer-text">&copy; Exun Clan</p>
+            <p class="footer-text">The Computer Club of Delhi Public School, R.K. Puram</p>
+        </div>
+    </footer>
 </body>
 </html>
