--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="page-footer">
+        <div class="footer-content">
+            <p class="footer-text">&copy; Exun Clan</p>
+            <p class="footer-text">The Computer Club of Delhi Public School, R.K. Puram</p>
+        </div>
+    </footer>
+
+    <script src="js/utils.js"></script>
+    <script src="js/chat.js"></script>
+</body>
+</html>me="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#0D0E11">
     <meta name="description" content="Website for Intra Sudo 2025">
     <title>Intra Sudo 2025 - Chat</title>
@@ -14,7 +29,7 @@
         <div class="nav-left">
             <a href="/home" class="logo-link">
                 <img class="logo-img" src="assets/logo-blue.png" alt="Sudocrypt" />
-                <span class="nav-brand">Intra Sudo vX.X</span>
+                <span class="nav-brand">Intra Sudo v6.0</span>
             </a>
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                 <img src="assets/logo_nobg.png" alt="Menu" class="mobile-menu-icon">
@@ -41,11 +56,12 @@
         </div>
     </div>
 
-    <main class="main-container">
-        <div class="main-content">
-            <h1 class="level-heading">Chat</h1>
+    <main class="page-container">
+        <div class="main-content-pages">
+            <div class="main-content">
+                <h1 class="level-heading">Chat</h1>
 
-            <div class="chat-content">
+                <div class="chat-content">
                 <div class="chat-messages" id="chatMessages">
                     <div class="loading-state" id="chatLoadingState">Loading messages...</div>
                 </div>
@@ -64,6 +80,13 @@
             </div>
         </div>
     </main>
+
+    <footer class="page-footer">
+        <div class="footer-content">
+            <p class="footer-text">&copy; Exun Clan</p>
+            <p class="footer-text">The Computer Club of Delhi Public School, R.K. Puram</p>
+        </div>
+    </footer>
 
     <script src="js/utils.js"></script>
     <script src="js/chat.js"></script>
