feat: added footer and chat changed to a popup

--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Website for Exun Intra Sudo 2025">
     <title>Login - Intra Sudo 2025</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/forms.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
