--- a/frontend/guidelines.html
+++ b/frontend/guidelines.html
@@ -7,10 +7,12 @@
     <meta name="description" content="Website for Exun Intra Sudo 2025">
     <title>Intra Sudo 2025 - Instructions</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/guidelines.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
-<body>
+<body class="scrollable-page">
     <nav class="navbar">
         <div class="nav-left">
             <a href="/" class="logo-link">
@@ -45,7 +47,8 @@
 
     <main class="page-container">
         <div class="main-content-pages">
-            <div class="guidelines-container">
+            <div class="guidelines-content">
+                <div class="guidelines-container">
                 <h1 class="guidelines-title">Instructions</h1>
                 
                 <div class="guidelines-section">
@@ -70,6 +73,8 @@
                         <p>No aspect of the website can be shared with any student, teacher, parent or person alike from outside of Delhi Public School, R.K. Puram.</p>
                         <p>Failure to comply will result in disciplinary actions.</p>
                     </div>
+                </div>
+            </div>
                 </div>
             </div>
         </div>
