--- a/frontend/404.html
+++ b/frontend/404.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Page not found - Intra Sudo 2025">
     <title>Page Not Found - Intra Sudo 2025</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/components.css">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -35,13 +37,6 @@
             </div>
         </main>
     </div>
-    
-    <footer class="page-footer">
-        <div class="footer-content">
-            <p class="footer-text">&copy; Exun Clan</p>
-            <p class="footer-text">The Computer Club of Delhi Public School, R.K. Puram</p>
-        </div>
-    </footer>
     
     <script src="js/404.js"></script>
     <style>
