--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -7,10 +7,12 @@
     <meta name="description" content="Admin Dashboard for Intra Sudo 2025">
     <title>Admin Dashboard - Intra Sudo 2025</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/admin.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
-<body>
+<body class="scrollable-page">
     <nav class="navbar">
         <div class="nav-left">
             <a href="/" class="logo-link">
@@ -47,7 +49,8 @@
 
     <div class="page-container">
         <div class="main-content-pages">
-            <div class="admin-container">
+            <div class="admin-content">
+                <div class="admin-container">
                 <header class="admin-header">
                     <h1 class="admin-title">Admin Dashboard</h1>
                 </header>
@@ -185,6 +188,10 @@
                 <button class="btn-secondary confirm-btn" onclick="closeConfirmModal()">Cancel</button>
                 <button class="btn-primary confirm-btn" id="confirmActionBtn" onclick="confirmAction()">Confirm</button>
             </div>
+                </div>
+            </div>
+        </div>
+    </div>
         </div>
     </div>
 
