--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Website for Exun Intra Sudo 2025">
     <title>Intra Sudo 2025</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/chat.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body class="index-page">
