--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Website for Exun Intra Sudo 2025">
     <title>Intra Sudo 2025</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
