refactor: guidlines order.

--- a/frontend/guidelines.html
+++ b/frontend/guidelines.html
@@ -73,6 +73,10 @@
                         <p>No aspect of the website can be shared with any student, teacher, parent or person alike from outside of Delhi Public School, R.K. Puram.</p>
                         <p>Failure to comply will result in disciplinary actions.</p>
                     </div>
+                    
+                    <div class="guidelines-actions" style="display: flex !important; justify-content: center !important; align-items: center !important; margin: 2rem 0 !important; text-align: center !important;">
+                        <a href="/home" class="landing-button" style="margin: 0 auto !important;">Get Started</a>
+                    </div>
                 </div>
             </div>
                 </div>
