--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -27,8 +27,7 @@
                     </div>
                     
                     <div class="landing-actions">
-                        <a href="/home" class="landing-button">Get Started</a>
-                        <a href="/guidelines" class="landing-button landing-button-secondary">Guidelines</a>
+                        <a href="/guidelines" class="landing-button">Guidelines</a>
                     </div>
                 </div>
             </div>
