added multi hints frontend

--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -49,17 +49,11 @@
     <main class="page-container">
         <div class="main-content-pages">
             <div class="hints-container">
-                <h1 class="level-heading">Hints</h1>
+                <h1 class="hints-title">Hints</h1>
                 
-                <div class="level-question-container" id="levelQuestionContainer" style="display: none;">
-                    <div class="level-question" id="levelQuestion"></div>
-                </div>
-                
-                <div class="hints-wrapper">
-                    <div class="hints-content" id="hintsContainer">
-                        <div class="hint-item">
-                            <h3 class="hint-title">Loading hints...</h3>
-                        </div>
+                <div class="questions-wrapper" id="questionsWrapper">
+                    <div class="questions-list" id="questionsList">
+                        <div class="loading-message">Loading questions...</div>
                     </div>
                 </div>
                 <div style="margin-bottom: 60px;"></div>
