--- a/frontend/hints.html
+++ b/frontend/hints.html
@@ -48,15 +48,22 @@
 
     <main class="page-container">
         <div class="main-content-pages">
+            <div class="announcements-container" id="announcementsContainer" style="display: none;">
+                <h1 class="announcements-title">Announcements</h1>
+                <div class="announcements-wrapper" id="announcementsWrapper">
+                    <div class="announcements-list" id="announcementsList">
+                        <div class="loading-message">Loading announcements...</div>
+                    </div>
+                </div>
+            </div>
+            
             <div class="hints-container">
                 <h1 class="hints-title">Hints</h1>
-                
                 <div class="questions-wrapper" id="questionsWrapper">
                     <div class="questions-list" id="questionsList">
                         <div class="loading-message">Loading questions...</div>
                     </div>
                 </div>
-                <div style="margin-bottom: 60px;"></div>
             </div>
         </div>
     </main>
