added annoucement functionality, bug fixes.

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -208,6 +208,22 @@
 
                     <section class="admin-section">
                         <div class="section-header">
+                            <h2 class="section-title">Admin Settings</h2>
+                        </div>
+                        <div class="admin-settings">
+                            <div class="admin-setting-item">
+                                <div class="setting-description">Reset your game level to 1</div>
+                                <div class="setting-action">
+                                    <button class="btn-primary" onclick="resetMyLevel()">
+                                        Reset My Level
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="admin-section">
+                        <div class="section-header">
                             <h2 class="section-title">User Management</h2>
                             <button class="btn-primary" onclick="refreshUsers()">
                                 Refresh
