--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -17,6 +17,7 @@
         <div class="nav-left">
             <a href="/home" class="logo-link">
                 <img class="logo-img" src="assets/logo-blue.png" alt="Sudocrypt" />
+                <div class="logo-notification" id="logoNotification" style="display: none;"></div>
                 <span class="nav-brand">Intra Sudo vX.X</span>
             </a>
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
