--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -91,102 +91,52 @@
         width: 100vw;
         height: 100vh;
         background: rgba(0, 0, 0, 0.7) !important;
-        backdrop-filter: blur(8px);
-        opacity: 0;
         justify-content: center;
         align-items: center;
-        transition: all 0.3s ease;
     }
     .auth-modal.show {
         display: flex;
-        opacity: 1;
     }
     .auth-modal-window {
-        background: linear-gradient(135deg, #1a1d29 0%, #2d3748 50%, #1a1d29 100%) !important;
-        color: #fff;
-        border-radius: 16px;
-        box-shadow: 
-            0 25px 50px -12px rgba(0, 0, 0, 0.8),
-            0 0 0 1px rgba(41, 119, 245, 0.3),
-            inset 0 1px 0 rgba(255, 255, 255, 0.1);
-        padding: 2.5rem 3rem;
+        background: #000000 !important;
+        color: #2977f5;
+        border-radius: 8px;
+        border: 2px solid #2977f5;
+        padding: 2rem;
         min-width: 380px;
         max-width: 90vw;
         text-align: center;
-        border: 1px solid rgba(41, 119, 245, 0.2);
         position: relative;
-        transform: scale(0.9) translateY(20px);
-        transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-    }
-    .auth-modal.show .auth-modal-window {
-        transform: scale(1) translateY(0);
-    }
-    .auth-modal-window::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: 1px;
-        background: linear-gradient(90deg, transparent 0%, rgba(41, 119, 245, 0.6) 50%, transparent 100%);
     }
     .auth-modal-title {
         font-size: 1.5rem;
         font-weight: 700;
         margin-bottom: 1rem;
         color: #2977f5;
-        text-shadow: 0 0 20px rgba(41, 119, 245, 0.3);
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 0.75rem;
-    }
-    .auth-modal-title::before {
-        content: "ℹ️";
-        font-size: 1.25rem;
-        filter: drop-shadow(0 0 8px rgba(41, 119, 245, 0.5));
     }
     .auth-modal-message {
         font-size: 1.1rem;
         margin-bottom: 2rem;
-        color: #e2e8f0;
+        color: #2977f5;
         line-height: 1.6;
         font-weight: 400;
     }
     .auth-modal-button {
-        background: linear-gradient(135deg, #2977f5 0%, #1e5fd9 100%);
-        color: #fff;
-        border: none;
-        border-radius: 10px;
+        background: #2977f5;
+        color: #000000;
+        border: 2px solid #2977f5;
+        border-radius: 8px;
         padding: 0.875rem 2.5rem;
         font-size: 1.1rem;
         font-weight: 600;
         cursor: pointer;
-        transition: all 0.3s ease;
-        box-shadow: 0 4px 15px rgba(41, 119, 245, 0.3);
-        position: relative;
-        overflow: hidden;
-    }
-    .auth-modal-button::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
-        transition: left 0.5s;
     }
     .auth-modal-button:hover {
-        background: linear-gradient(135deg, #1e5fd9 0%, #1a54c4 100%);
-        transform: translateY(-2px);
-        box-shadow: 0 8px 25px rgba(41, 119, 245, 0.4);
-    }
-    .auth-modal-button:hover::before {
-        left: 100%;
-    }
-    .auth-modal-button:active {
-        transform: translateY(0);
+        background: #1e5fd9;
+        border-color: #1e5fd9;
     }
     </style>
     
